--- a/.github/workflows/validate-tests-suite.yml
+++ b/.github/workflows/validate-tests-suite.yml
@@ -14,7 +14,7 @@ jobs:
         run: |
           wget -q -O venom https://github.com/ovh/venom/releases/download/v1.0.1/venom.linux-amd64
           chmod +x venom
-          ./venom update
+          ./venom update || true
       - name: Execute the test plan
         run: |
           venom run --var="target_site=https://righettod.eu" --var="internet_facing=true" --var="logout_url=/logout" tests_suite.yml
