--- a/.github/workflows/validate-tests-suite.yml
+++ b/.github/workflows/validate-tests-suite.yml
@@ -15,7 +15,7 @@ jobs:
           sudo apt-get install -y wget yamllint
       - name: Validate the Venom test suite file using custom configuation
         run: |
-          yamllint tests_suite.yml         
+          yamllint --strict tests_suite.yml         
       - name: Get venom
         run: |
           wget -q -O venom https://github.com/ovh/venom/releases/download/v1.0.1/venom.linux-amd64
