--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,3 @@
 {
-    "recommendations": ["redhat.vscode-yaml"]
+    "recommendations": ["redhat.vscode-yaml", "ms-python.python", "ms-python.vscode-pylance"]
 }
