--- a/.github/workflows/validate-tests-suite.yml
+++ b/.github/workflows/validate-tests-suite.yml
@@ -23,5 +23,5 @@ jobs:
           ./venom update || true
       - name: Execute the test plan
         run: |
-          ./venom run --var="target_site=https://righettod.eu" --var="internet_facing=true" --var="logout_url=/logout" tests_suite.yml || true
+          ./venom run --var="target_site=https://oshp-validator-mock.onrender.com" --var="internet_facing=true" --var="logout_url=/" tests_suite.yml || true
 
