Debug GHA error

--- a/.github/workflows/validate-tests-suite.yml
+++ b/.github/workflows/validate-tests-suite.yml
@@ -27,4 +27,5 @@ jobs:
       - name: Execute the test plan
         run: |
           ./venom run --var="target_site=https://oshp-validator-mock.onrender.com" --var="internet_facing=true" --var="logout_url=/" tests_suite.yml
+          cat venom.log
 
