--- a/.github/workflows/validate-tests-suite.yml
+++ b/.github/workflows/validate-tests-suite.yml
@@ -24,6 +24,7 @@ jobs:
           wget -q -O venom https://github.com/ovh/venom/releases/download/v1.0.1/venom.linux-amd64
           chmod +x venom
           ./venom update || true
+          ./venom version
       - name: Execute the test plan
         run: |
           ./venom run --var="target_site=https://oshp-validator-mock.onrender.com" --var="internet_facing=true" --var="logout_url=/" tests_suite.yml
