--- a/.github/workflows/validate-tests-suite.yml
+++ b/.github/workflows/validate-tests-suite.yml
@@ -28,5 +28,6 @@ jobs:
       - name: Execute the test plan
         run: |
           ./venom run --var="target_site=https://oshp-validator-mock.onrender.com" --var="internet_facing=true" --var="logout_url=/" tests_suite.yml
+          echo "[+] Venom log file content:"
           cat venom.log
 
