--- a/.github/workflows/validate-tests-suite.yml
+++ b/.github/workflows/validate-tests-suite.yml
@@ -16,10 +16,10 @@ jobs:
         run: |
           sudo apt-get install -y curl wget yamllint
           curl --connect-timeout 600 -sk https://oshp-validator-mock.onrender.com
-      - name: Validate the Venom test suite file using custom configuation
+      - name: Validate the venom tests suite file
         run: |
           yamllint --strict tests_suite.yml         
-      - name: Get venom
+      - name: Get the latest release of venom
         run: |
           wget -q -O venom https://github.com/ovh/venom/releases/download/v1.0.1/venom.linux-amd64
           chmod +x venom
